# py-pouffe

./: .gitignore  LICENSE  LICENSE.txt  Pipfile  README.en.md  README.md  README.pypi.md  example.env  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API-reference.md  _config.yml  index.md
examples/: 010-welcome.feature  011-_all_dbs.feature  020-_all_dbs.feature  930-auth-session.feature  README.md  environment.py
examples/steps/: __init__.py
src/information_schema/: __init__.py
src/poufdb/: __about__.py  __init__.py  __main__.py  __meta__.py  __options__.py  defaults.py  options.py  utils.py
src/poufdb/cli/: __init__.py
src/poufdb/db/: __init__.py  utils.py
src/poufdb/http/: __init__.py  const.py  flask.py  flask_async.py
src/poufdb/information_schema/: __init__.py
src/poufdb/replicator/: __init__.py
src/poufdb/storage/: __init__.py  databases.py  information_schema.py  options.py  peewee.py  peewee_adv.py  utils.py
src/poufdb/storage/peewee_adv/: __init__.py  base_model.py
src/poufdb/storage/sqlite_adv/: __init__.py  base_model.py  database.py  utils.py
src/rbac/: README.md  acl.py  context.py  proxy.py
