[build-system]
requires = ["hatchling","setuptools","cython","build","wheel"]
build-backend = "hatchling.build"

[project]
name = "poufdb"
dynamic = ["version","dependencies"]
description = "PoufDB (aka Pouffe) provides scripts for create & serve rest api similar to CouchDB but for sql-like db on backend"
readme = "README.pypi.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = { globs = ["LICENSES/*"] }
keywords = [
	"couchdb",
	"pouchdb",
	"sql",
	"sqlite",
	"embedded database wrapper",
	#"",
]
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
#dependencies = [
#  "click",
#]

[project.urls]
Documentation = "https://github.com/unknown/poufdb#readme"
Issues = "https://github.com/unknown/poufdb/issues"
Source = "https://github.com/unknown/poufdb"

[project.scripts]
poufdb = "poufdb.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch.version]
path = "src/poufdb/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/poufdb tests}"

[tool.coverage.run]
source_pkgs = ["poufdb", "tests"]
branch = true
parallel = true
omit = [
  "src/poufdb/__about__.py",
]

[tool.coverage.paths]
poufdb = ["src/poufdb", "*/poufdb/src/poufdb"]
tests = ["tests", "*/poufdb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
