[build-system]
requires = ["hatchling","setuptools","cython","build","wheel","hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "poufdb"
dynamic = ["version","dependencies"]
description = "PoufDB (aka Pouffe) provides scripts for create & serve rest api similar to CouchDB but for sql-like db on backend"
readme = "README.en.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = { globs = ["LICENSES/*"] }
keywords = [
	"couchdb",
	"pouchdb",
	"sql",
	"nosql",
	"sqlite",
	"embedded database wrapper",
	#"",
]
authors = [
  { name = "d;)", email = "ablaternae@github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://ablaternae.github.io/py-pouffe"
Issues = "https://github.com/ablaternae/py-pouffe/issues"
Source = "https://github.com/ablaternae/py-pouffe"

[project.scripts]
poufdb = "poufdb.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch.version]
path = "src/poufdb/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

